Fixed tab presenter collapse

--- a/src/WebComponents/PersistentObjectTabPresenter/persistent-object-tab-presenter.scss
+++ b/src/WebComponents/PersistentObjectTabPresenter/persistent-object-tab-presenter.scss
@@ -4,7 +4,7 @@
     @include layout-horizontal();
     @include relative();
 
-    &:not(.vi-persistent-object-dialog), &:not([class^="vi-retry-action-dialog"], &:not(.vi-retry-action-dialog)) {
+    &:not(.vi-persistent-object-dialog):not([class^="vi-retry-action-dialog"]):not(.vi-retry-action-dialog) {
         ::content {
             > vi-persistent-object-tab, > vi-query-items-presenter {
                 @include fit();
